[LeetCode] [代码随想录] 重构